<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sistem Informasi Bon Kantin</string>

    <string name="login_title">Login</string>
    <string name="logout_title">Logout</string>
    <string name="register_title">Akun Baru</string>

    <string name="username_title">Username</string>
    <string name="password_title">Password</string>
    <string name="nama_kantin_title">Nama Kantin</string>

    <string name="no_hp_title">No.HP</string>
    <string name="pekerjaan_title">Pekerjaan</string>

    <string name="name_title">Nama</string>
    <string name="jumlah_title">Jumlah</string>
    <string name="harga_title">Harga</string>
    <string name="total_title">Total  :</string>
    <string name="menu_title">Menu</string>
    <string name="tanggal_title">Tanggal</string>

    <string name="name">Adventia Gea</string>
    <string name="menu">Ayam Kremes</string>
    <string name="jumlah">1</string>
    <string name="tanggal">16/12/2021</string>
    <string name="harga">12.000</string>
    <string name="total">100.000</string>

    <string name="default_nama">None</string>
    <string name="default_menu">None</string>
    <string name="default_jumlah">0</string>
    <string name="default_tanggal">--/--/----</string>
    <string name="default_harga">12.000</string>

    <string name="selesai">Selesai</string>
    <string name="simpan_perubahan">Simpan Perubahan</string>
    <string name="share">Bagikan</string>
    <string name="ubah_tanggal">Ubah Tanggal</string>
    <string name="ubah_jumlah">Ubah Jumlah</string>
    <string name="ubah_harga">Ubah harga menjadi  :</string>

    <string name="input_harga" tools:ignore="TypographyEllipsis">Masukkan harga...</string>
    <string name="input_nama_baru" tools:ignore="TypographyEllipsis">Masukkan nama baru...</string>

    <string name="edit_nama">Edit Nama Pelanggan</string>
    <string name="edit_transaksi">Edit Transaksi</string>
    <string name="tambah_transaksi">Tambah Transaksi</string>
    <string name="cari_pelanggan">Cari Pelanggan</string>
    <string name="new_pelanggan">Pelanggan Baru</string>
    <string name="lihat_semua_pelanggan"><u>Lihat semua pelanggan</u></string>
</resources>