<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TambahTransaksiActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="15dp"
        android:background="@drawable/outlined_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/new_tanggal_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/pilih_tanggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:fontFamily="@font/lato_regular"
            android:text="@string/ubah_tanggal"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/new_tanggal_value"
            app:layout_constraintTop_toBottomOf="@+id/new_tanggal_value" />

        <TextView
            android:id="@+id/new_tanggal_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_tanggal"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/new_tanggal_title"
            app:layout_constraintTop_toBottomOf="@+id/new_tanggal_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/outlined_button"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/new_menu_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/ubah_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/lato_regular"
            android:hint="@string/input_harga"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/black"
            android:textColorHint="#80000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/new_menu_title"
            app:layout_constraintTop_toBottomOf="@+id/new_menu_title" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/outlined_button"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout4"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout4"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

        <TextView
            android:id="@+id/new_jumlah_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jumlah_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/new_jumlah_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_jumlah"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/new_jumlah_title"
            app:layout_constraintTop_toBottomOf="@+id/new_jumlah_title" />

        <Button
            android:id="@+id/pilih_jumlah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:fontFamily="@font/lato_regular"
            android:text="@string/ubah_jumlah"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/new_jumlah_value"
            app:layout_constraintTop_toBottomOf="@+id/new_jumlah_value" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/outlined_button"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <TextView
            android:id="@+id/new_harga_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harga_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/ubah_harga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/lato_regular"
            android:hint="@string/input_harga"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/black"
            android:textColorHint="#80000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/new_harga_title"
            app:layout_constraintTop_toBottomOf="@+id/new_harga_title" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/simpan_perubahan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45sp"
        android:background="@drawable/button"
        android:fontFamily="@font/lato_regular"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:text="@string/selesai"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout3"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout3"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>