<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/white"
    tools:context=".EditNamaActivity">

    <TextView
        android:id="@+id/new_nama_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/ubah_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:fontFamily="@font/lato_regular"
        android:hint="@string/input_nama_baru"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textColor="@color/black"
        android:textColorHint="#80000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/new_nama_title"
        app:layout_constraintTop_toBottomOf="@+id/new_nama_title" />

    <Button
        android:id="@+id/simpan_perubahan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="@drawable/button"
        android:fontFamily="@font/lato_regular"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:text="@string/selesai"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/ubah_nama"
        app:layout_constraintStart_toStartOf="@+id/ubah_nama"
        app:layout_constraintTop_toBottomOf="@+id/ubah_nama" />

</androidx.constraintlayout.widget.ConstraintLayout>